kube-manifests/02-Backend-of-frontend-Deployment-Service.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: cps-backend-dev
  labels:
    app: cps-backend-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cps-backend-dev
  template:  
    metadata:
      labels: 
        app: cps-backend-dev
    spec:
      containers:
        - name: cps-backend-dev
          image: CONTAINER_IMAGE 
          ports: 
            - containerPort: 3123
