kube-manifests/03-Backend-of-frontend-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: cps-backend-dev-service
  labels: 
    app: cps-backend-dev
  annotations:    
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /docs
spec:
  type: NodePort
  selector:
    app: cps-backend-dev
  ports: 
    - port: 80
      targetPort: 3123
